--- a/PyTorchDemoApp/app/build.gradle
+++ b/PyTorchDemoApp/app/build.gradle
@@ -24,6 +24,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    ndkVersion '22.0.6917172 rc1'
 }
 
 dependencies {
