--- a/PyTorchDemoApp/app/src/main/AndroidManifest.xml
+++ b/PyTorchDemoApp/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         <activity android:name=".nlp.TextClassificationActivity" />
 
     </application>
-
+<!--    使用camera权限-->
     <uses-permission android:name="android.permission.CAMERA" />
 
 </manifest>
